
    HADOOP-9549. WebHdfsFileSystem hangs on close(). (daryn via kihwal)

    HADOOP-9485. No default value in the code for
    hadoop.rpc.socket.factory.class.default. (Colin Patrick McCabe via atm)

    HADOOP-9459. ActiveStandbyElector can join election even before
    Service HEALTHY, and results in null data at ActiveBreadCrumb.
    (Vinay and todd via todd)

Release 2.0.4-alpha - 2013-04-25 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9467. Metrics2 record filter should check name as well as tags.
    (Ganeshan Iyler via llu)

    HADOOP-9406. hadoop-client leaks dependency on JDK tools jar. (tucu)

    HADOOP-9301. hadoop client servlet/jsp/jetty/tomcat JARs creating
    conflicts in Oozie & HttpFS. (tucu)

    HADOOP-9299.  kerberos name resolution is kicking in even when kerberos
    is not configured (daryn)

    HADOOP-9408. misleading description for net.topology.table.file.name
    property in core-default.xml. (rajeshbabu via suresh)

    HADOOP-9444. Modify hadoop-policy.xml to replace unexpanded variables to a
    default value of '*'. (Roman Shaposhnik via vinodkv)

    HADOOP-9471. hadoop-client wrongfully excludes jetty-util JAR, 
    breaking webhdfs. (tucu)

Release 2.0.3-alpha - 2013-02-06 

  INCOMPATIBLE CHANGES

    HADOOP-8999. SASL negotiation is flawed (daryn)

  NEW FEATURES

    HADOOP-8561. Introduce HADOOP_PROXY_USER for secure impersonation in child
    hadoop client processes. (Yu Gao via llu)

    HADOOP-8597. Permit FsShell's text command to read Avro files.
    (Ivan Vladimirov Ivanov via cutting)

    HADOOP-9020. Add a SASL PLAIN server (daryn via bobby)

    HADOOP-9090. Support on-demand publish of metrics. (Mostafa Elhemali via
    suresh)

    HADOOP-9054. Add AuthenticationHandler that uses Kerberos but allows for 
    an alternate form of authentication for browsers. (rkanter via tucu)

  IMPROVEMENTS

    HADOOP-8789. Tests setLevel(Level.OFF) should be Level.ERROR.